WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163259
REGRESSION (
r198251
): -[UIWebView mediaPlaybackRequiresUserAction] defaults to NO
https://bugs.webkit.org/show_bug.cgi?id=163259
Summary
REGRESSION (r198251): -[UIWebView mediaPlaybackRequiresUserAction] defaults t...
Daniel Bates
Reported
2016-10-10 17:12:48 PDT
Following
r198251
(
bug #155275
), -[UIWebView mediaPlaybackRequiresUserAction] defaults to NO. But it should default to YES as per <
https://developer.apple.com/reference/uikit/uiwebview/1617954-mediaplaybackrequiresuseraction?language=objc
>.
Attachments
Patch
(2.38 KB, patch)
2016-10-10 17:28 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2016-10-10 17:13:19 PDT
<
rdar://problem/28680515
>
Daniel Bates
Comment 2
2016-10-10 17:28:25 PDT
Created
attachment 291196
[details]
Patch
Daniel Bates
Comment 3
2016-10-11 13:21:03 PDT
Comment on
attachment 291196
[details]
Patch Clearing flags on attachment: 291196 Committed
r207160
: <
http://trac.webkit.org/changeset/207160
>
Daniel Bates
Comment 4
2016-10-11 13:21:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug